# gradenza-api

./: .dockerignore  .gitignore  Dockerfile  Procfile  pyproject.toml  requirements.txt
src/gradenza_api/: auth.py  main.py  redis_config.py  settings.py  worker.py
src/gradenza_api/jobs/: generate_quiz.py  process_submission.py
src/gradenza_api/routes/: analytics.py  canvas_chat.py  class_pdf_notes.py  materials.py  ocr.py  online_lessons.py  quiz.py  submissions.py
src/gradenza_api/services/: class_pdf_note_exports.py  class_pdf_note_pdf.py  llm_structured.py  openrouter.py  pdf_playwright.py  quiz_schemas.py  student_context.py  supabase_client.py  usage.py
tests/: test_canvas_chat_route.py  test_online_lessons_workflow.py  test_process_submission_helpers.py  test_quiz_image_attach.py  test_quiz_latex.py  test_quiz_patch_question.py  test_quiz_regenerate.py  test_quiz_schemas.py  test_redis_config.py  test_usage.py
