[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradenza-api"
version = "0.1.0"
description = "Gradenza backend API — replaces Supabase Edge Functions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "arq>=0.26.1",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "redis>=5.2.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gradenza_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
